delete about absolute position to avoid overlap

--- a/style.css
+++ b/style.css
@@ -328,7 +328,6 @@ header ul {
 /* about */
 .about {
   background: #1c1a19;
-  position: absolute;
   width: 100%;
   margin-bottom: 1rem;
 }
